# digital-media

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.local.yml  pyproject.toml  requirements.txt
.cursor/rules/: api-auth.mdc  architecture-pointer.mdc  database-change-control.mdc  iam-governance.mdc  pr-conventions.mdc  repo-hygiene.mdc  service-oriented-data-access.mdc
.github/workflows/: ci.yml  migrations.yml  publish-artifact.yml
docs/: architecture.md
migrations/: 001_init.sql
scripts/: bootstrap_local_db.py  run_migrations.py
service/: app.py  auth.py  config.py  db.py  embeddings.py  models.py  storage.py  tagging.py
tests/: test_app.py
